--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@
 # Homepage configuration
 # See https://fontawesome.com/v5/search for icons options
 
-title: "Shefer Hetzner Dashboard"
+title: "Shefer Server Services"
 subtitle: "Homer"
 logo: "logo.png"
 # icon: "fas fa-skull-crossbones" # Optional icon
@@ -41,12 +41,12 @@ colors:
     link-hover: "#ffdd57"
 
 # Optional message
-message:
+#message:
   #url: https://b4bz.io
-  style: "is-dark" # See https://bulma.io/documentation/components/message/#colors for styling options.
-  title: "Demo !"
-  icon: "fa fa-grin"
-  content: "This is a dummy homepage demo. <br /> Find more information on <a href='https://github.com/bastienwirtz/homer'>github.com/bastienwirtz/homer</a>"
+#  style: "is-dark" # See https://bulma.io/documentation/components/message/#colors for styling options.
+#  title: "Demo !"
+#  icon: "fa fa-grin"
+#  content: "This is a dummy homepage demo. <br /> Find more information on <a href='https://github.com/bastienwirtz/homer'>github.com/bastienwirtz/homer</a>"
 
 # Optional navbar
 # links: [] # Allows for navbar (dark mode, layout, and search) without any links
@@ -60,9 +60,9 @@ links:
     url: "https://cv.shefer.dev/"
   # this will link to a second homer page that will load config from additional-page.yml and keep default config values as in config.yml file
   # see url field and assets/additional-page.yml.dist used in this example:
-  - name: "another page!"
-    icon: "fas fa-file-alt"
-    url: "#additional-page" 
+#  - name: "another page!"
+#    icon: "fas fa-file-alt"
+#    url: "#additional-page" 
 
 # Services
 # First level array represent a group.
@@ -74,11 +74,24 @@ services:
       - name: "Portainer"
         logo: "assets/tools/portainer.png"
         subtitle: "Docker GUI"
-        tag: "app"
+        #tag: "app"
         url: "https://portainer.hetzner.shefer.dev/"
         target: "_blank" # optional html a tag target attribute
       - name: "Nginx Proxy Manager"
         logo: "assets/tools/sample2.png"
         subtitle: "Nginx and proxy GUI"
-        tag: "app"
+        #tag: "app"
         url: "https://nginx.hetzner.shefer.dev"
+        target: "_blank" # optional html a tag target attribute
+      - name: "Teamcity"
+        logo: "assets/tools/sample2.png"
+        subtitle: "CI/CD pipelines"
+        #tag: "app"
+        url: "https://teamcity.hetzner.shefer.dev"
+        target: "_blank" # optional html a tag target attribute
+      - name: "Teamcity"
+        logo: "assets/tools/sample2.png"
+        subtitle: "CI/CD pipelines"
+        #tag: "app"
+        url: "https://teamcity.hetzner.shefer.dev"
+        target: "_blank" # optional html a tag target attribute
